--- a/code/index.html
+++ b/code/index.html
@@ -50,7 +50,7 @@
    </div>
 <!-- And here comes the Flexbox footer  -->
     <footer>
-      <div class="Credits">MADE BY <a href="http:/technigo.io"><img class="logo-technigo" src="/pictures/git commitlogo-technigo.jpeg"></a> STUDENT ANDREAS AXELSSON  
+      <div class="Credits">MADE BY <a href="http:/technigo.io"><img class="logo-technigo" src="/pictures/logo-technigo.jpeg"></a> STUDENT ANDREAS AXELSSON  
       </div>
     </footer>
   </body>
