--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- dont forget the meta tag for responsiveness -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
     <header>
       <!-- Some kind of logo and navbar -->
       <div class="navbar">
@@ -15,57 +16,60 @@
             <img class ="flex-child-image"src="./chocolate-logo.jpg" alt="Chocolate-logo">
             <h1 class ="flex-child-logo-title">The Chocolate Post</h1>
           </section>
+          <!--new-->
+          
+          <!--new-->
           <div id="myLinks">
-          <ul class ="nav_links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#recipes">Recipes</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>  
-        </a>
-        <script>
-         function myFunction() {
+            <ul class ="nav_links">
+              <li><a href="#about">About</a></li>
+              <li><a href="#recipes">Recipes</a></li>
+              <li><a href="#news">News</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
+           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>  
+            </a>
+          <script>
+          function myFunction() {
           var x = document.getElementById("myLinks");
           if (x.style.display === "block") {
-             x.style.display = "none";
+          x.style.display = "none";
           } else {
-           x.style.display = "block";
-         }
-          } 
-        </script>
+          x.style.display = "block";
+            }
+          }
+          </script>
         </nav>
       </div>    
     </header>
     <body>
-     <section class="grid-parent-big-news">
+      <section class="grid-parent-big-news">
       <!-- The big news content -->
-      <div class="grid-item-big-card-img">
-        <img src="./chocolate-cake-fudge.jpeg" alt ="chocolate-fudge-cake">
-      </div>
-      <div class="grid-item-big-text">
-        <h2 class="card__title">Recipe of the Week</h2>
-        <h3 class ="card__description">Chocolate Fudge Cake with rich buttercream</h3>
-        <p> The perfect Chocolate Fudge Cake covered in a creamy, lush chocolate buttercream. Two layers of buttery, chocolate goodness, paired with the ultimate frosting and chocolate shavings - heaven!</p> 
-        <p style ="padding-top:1em"> Perfect for any occassion, it's easy-peasy to make, too!</p>
-        <p style ="padding-top: 1em">You'll be coming back for seconds in no time.</p>
-        <a class ="click-me" href="https://www.sweetestmenu.com/chocolate-fudge-layer-cake/"><button>Bake me!</button></a>
-      </div>
-    </section>
-    <section class="grid-parent-other-news">
-      <!-- The other news  -->
-      <div class="grid-item-card">
-        <img src="./chocolate-drink.jpeg" alt="chocolate-drink">
-        <p>What alcohol pairs well with chocolate?</p>
-        <a href="https://www.toastmag.co.nz/spirits/pairing-chocolate-and-alcohol">Drink me!</a>
-      </div>
-      <div class="grid-item-card">
-        <img src="./vegan-chocolate.jpeg" alt="vegan-chocolate">
-        <p>Looking for vegan chocolate?</p>
-        <a href="https://vegnews.com/vegan-guides/chocolate/accidentally-vegan-chocolates">Find me!</a>
-      </div> 
+        <div class="grid-item-big-card-img">
+          <img src="./chocolate-cake-fudge.jpeg" alt ="chocolate-fudge-cake">
+         </div>
+        <div class="grid-item-big-text">
+          <h2 class="card__title" style="padding-bottom:1em">Recipe of the Week</h2>
+          <h3 class ="card__description" style="padding-bottom:1em">Chocolate Fudge Cake with rich buttercream</h3>
+          <p> The perfect Chocolate Fudge Cake covered in a creamy, lush chocolate buttercream. Two layers of buttery, chocolate goodness, paired with the ultimate frosting and chocolate shavings - heaven!</p> 
+          <p style ="padding-top:1em"> Perfect for any occassion, it's easy-peasy to make, too!</p>
+          <p style ="padding-top: 1em">You'll be coming back for seconds in no time!</p>
+          <a class ="click-me" href="https://www.sweetestmenu.com/chocolate-fudge-layer-cake/"><button>Bake me!</button></a>
+        </div>
+      </section>
+      <section class="grid-parent-other-news">
+       <!-- The other news  -->
+        <div class="grid-item-card">
+         <img src="./chocolate-drink.jpeg" alt="chocolate-drink">
+         <p>What alcohol pairs well with chocolate?</p>
+         <a href="https://www.toastmag.co.nz/spirits/pairing-chocolate-and-alcohol">Drink me!</a>
+        </div>
+        <div class="grid-item-card">
+          <img src="./vegan-chocolate.jpeg" alt="vegan-chocolate">
+          <p>Looking for vegan chocolate?</p>
+          <a href="https://vegnews.com/vegan-guides/chocolate/accidentally-vegan-chocolates">Find me!</a>
+        </div> 
       <div class="grid-item-card">
         <img src="./chocolate-chilli.jpeg" alt="chocolate-chilli">
         <p>What happens when we add chilli to chocolate?</p>
