Pretty much started over. Did HTML and CSS for a simple header,designed mobile first. Created the desktop/tablet version as well, and created a temporary file for it.

--- a/code/index.html
+++ b/code/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  
+
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
@@ -9,38 +9,66 @@
   </head>
 
   <body>
+<header>
+  <section class="flex-parent">
+    <div class="flex-child logo">
+      <img src="./smalllogotransparent.png" alt="Good News logo">
+    </div>
+    <div class="flex-child icon-mobile">
+      <a href="#"><img src="./burgermenu.png" alt="menu icon"></a>
+    </div>
+  </section>
+</header>
 
-    <header>
-      <!-- Some kind of logo and navbar -->
-      <section class="header-top">
+
+  </body>
+</html>
+
+
+
+
+
+
+
+<!--  
+  This is the html for the navbar, in tablet/desktop mode. styling is in the forlater css file
+  <div class="flex-child navbar">
+      <nav>
+          <a href="./index.html">Home</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+      </nav>
+    </div>-->
+
+
+
+    <!--
+
+    <section class="flex-parent-header">
         <div class="logo">
-          <a id="logo" href="index.html">
-            <img src="./logo.webp" alt="logo"/>
+          <a href="index.html">
+            <img id="logo" src="./logo.webp" alt="logo"/>
           </a>
-          <a id="logotitle" href="index.html">
-            <img src="./goodnews1.png" alt="logotitle"/>
+          <a id="goodnews" href="index.html">
+            <h1>Good News</h1>
           </a>
         </div>
-      </section>
 
-      <section class="header-bottom">
         <nav>
-            <a class="navigation-link" href="index.html">Home</a>
-            <a class="navigation-link" href="#">About us</a>
-            <a class="navigation-link" href="#">Contact</a>
+            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="#">About us</a>
+            <a class="nav-link" href="#">Contact</a>
         </nav>
-      </section>
-
-    </header>
+    </section>
 
     <section class="Grid-Parent-News">
-      <!-- The big news content -->
+
       <div class="grid-item grid-item-big">
         <img src="./busystreet.jpg" alt="busy street"/>
-        <h1>Big News</h1>
+        <h2>Big News</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consectetur, elit ac aliquet ullamcorper, magna urna lacinia dui, et mattis quam ipsum in erat. Donec mattis interdum orci, et viverra massa eleifend vitae. Mauris semper, odio ac tristique tincidunt, dolor ante laoreet turpis, nec congue metus libero in dolor.</p>
       </div>
-      <!-- The other news  -->
+
       <div class="grid-item grid-item-small">
           <img src="./sunflowers.jpg" alt="sunflowers"/>
           <h3>Other News 1</h3>
@@ -66,5 +94,5 @@
         <h3>Other News 6</h3>
       </div> 
     </section>
-  </body>
-</html>
+
+-->
