I remembered to add the elemtent for responsive design, which then required to adjustments to the header. News grid in proces

--- a/code/index.html
+++ b/code/index.html
@@ -5,24 +5,88 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width-device-width, initial-scale=1.0>">
   </head>
 
   <body>
-<header>
-  <section class="flex-parent">
-    <div class="flex-child logo">
-      <img src="./smalllogotransparent.png" alt="Good News logo">
+
+  <header>
+    <section class="flex-parent-header">
+      <div class="flex-child logo">
+        <img src="./smalllogotransparent.png" alt="Good News logo">
+      </div>
+      <div class="flex-child icon-mobile">
+        <a href="#"><img src="./burgermenu.png" alt="menu icon"></a>
+      </div>
+    </section>
+  </header>
+
+
+  <section class="grid-parent">
+    <div class="grid-item big-grid-item">
+      <img src="./busystreet1.jpg" alt="a busy street in sunlight">
+      <h1>Very important news</h1>
+      <p>bla bla bla</p>
     </div>
-    <div class="flex-child icon-mobile">
-      <a href="#"><img src="./burgermenu.png" alt="menu icon"></a>
+    <div class="grid-item">
+      <h1>Very important news</h1>
+    </div>
+    <div class="grid-item">
+      <h1>Very important news</h1>
+    </div>
+    <div class="grid-item">
+      <h1>Very important news</h1>
+    </div>
+    <div class="grid-item">
+      <h1>Very important news</h1>
+    </div>
+    <div class="grid-item">
+      <h1>Very important news</h1>
+    </div>
+    <div class="grid-item">
+      <h1>Very important news</h1>
     </div>
   </section>
-</header>
-
 
   </body>
 </html>
+
+<!--for grid but won't work
+<section class="grid-parent-news">
+  <div class="grid-item grid-item-big">
+    <img src="./busystreet.jpg" alt="busy street"/>
+    <h2>Big News</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consectetur, elit ac aliquet ullamcorper, magna urna lacinia dui, et mattis quam ipsum in erat. Donec mattis interdum orci, et viverra massa eleifend vitae. Mauris semper, odio ac tristique tincidunt, dolor ante laoreet turpis, nec congue metus libero in dolor.</p>
+  </div>
+  <div class="grid-item grid-item-small">
+      <img src="./sunflowers.jpg" alt="sunflowers"/>
+      <h3>Other News 1</h3>
+  </div>
+  <div class="grid-item grid-item-small">
+      <img src="./manreading.jpg" alt="Man reading newspapers"/>
+      <h3>Other News 2</h3>
+  </div>
+  <div class="grid-item grid-item-small">
+    <img src="./hands.jpg" alt="Hands joining together"/>
+    <h3>Other News 3</h3>
+  </div> 
+  <div class="grid-item grid-item-small">
+    <img src="./newspapers.jpg" alt="Newsapers and magazins on a rack"/>
+    <h3>Other News 4</h3>
+  </div> 
+  <div class="grid-item grid-item-small">
+    <img src="./work.jpg" alt="Three people working and laughing together"/>
+    <h3>Other News 5</h3>
+  </div> 
+  <div class="grid-item grid-item-small">
+    <img src="./youth.jpg" alt="Young people in a crowd"/>
+    <h3>Other News 6</h3>
+  </div> 
+</section>
+
+-->
+
+
 
 
 
@@ -41,58 +105,3 @@
     </div>-->
 
 
-
-    <!--
-
-    <section class="flex-parent-header">
-        <div class="logo">
-          <a href="index.html">
-            <img id="logo" src="./logo.webp" alt="logo"/>
-          </a>
-          <a id="goodnews" href="index.html">
-            <h1>Good News</h1>
-          </a>
-        </div>
-
-        <nav>
-            <a class="nav-link" href="index.html">Home</a>
-            <a class="nav-link" href="#">About us</a>
-            <a class="nav-link" href="#">Contact</a>
-        </nav>
-    </section>
-
-    <section class="Grid-Parent-News">
-
-      <div class="grid-item grid-item-big">
-        <img src="./busystreet.jpg" alt="busy street"/>
-        <h2>Big News</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consectetur, elit ac aliquet ullamcorper, magna urna lacinia dui, et mattis quam ipsum in erat. Donec mattis interdum orci, et viverra massa eleifend vitae. Mauris semper, odio ac tristique tincidunt, dolor ante laoreet turpis, nec congue metus libero in dolor.</p>
-      </div>
-
-      <div class="grid-item grid-item-small">
-          <img src="./sunflowers.jpg" alt="sunflowers"/>
-          <h3>Other News 1</h3>
-      </div>
-      <div class="grid-item grid-item-small">
-          <img src="./manreading.jpg" alt="Man reading newspapers"/>
-          <h3>Other News 2</h3>
-      </div>
-      <div class="grid-item grid-item-small">
-        <img src="./hands.jpg" alt="Hands joining together"/>
-        <h3>Other News 3</h3>
-      </div> 
-      <div class="grid-item grid-item-small">
-        <img src="./newspapers.jpg" alt="Newsapers and magazins on a rack"/>
-        <h3>Other News 4</h3>
-      </div> 
-      <div class="grid-item grid-item-small">
-        <img src="./work.jpg" alt="Three people working and laughing together"/>
-        <h3>Other News 5</h3>
-      </div> 
-      <div class="grid-item grid-item-small">
-        <img src="./youth.jpg" alt="Young people in a crowd"/>
-        <h3>Other News 6</h3>
-      </div> 
-    </section>
-
--->
