Completed an acceptable design for mobile. Couldnt' get the images to arrange as I wanted, so I made a grid within the grid, and made the image the background for the nested div

--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
   <header>
     <section class="flex-parent-header">
       <div class="flex-child logo">
-        <img src="./smalllogotransparent.png" alt="Good News logo">
+        <a href="index.html"><img src="./smalllogotransparent.png" alt="Good News logo"></a>
       </div>
       <div class="flex-child icon-mobile">
         <a href="#"><img src="./burgermenu.png" alt="menu icon"></a>
@@ -23,28 +23,56 @@
 
 
   <section class="grid-parent">
+
     <div class="grid-item big-grid-item">
-      <img src="./busystreet1.jpg" alt="a busy street in sunlight">
-      <h1>Very important news</h1>
-      <p>bla bla bla</p>
+      <div class="big-grid-nested-item big-image"></div>
+      <div class="big-grid-nested-item big-text">
+        <h1>Very Important News Headline: You should really read this</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu imperdiet lorem. Maecenas in arcu fermentum... </p>
+      </div>
     </div>
-    <div class="grid-item">
-      <h1>Very important news</h1>
+
+    <div class="grid-item small-grid-item">
+      <div class="small-grid-nested-item small-image1"></div>
+      <div class="small-grid-nested-item small-text">
+        <h2>Another headline</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur...</p>
+      </div>
     </div>
-    <div class="grid-item">
-      <h1>Very important news</h1>
+    <div class="grid-item small-grid-item">
+      <div class="small-grid-nested-item small-image2"></div>
+      <div class="small-grid-nested-item small-text">
+        <h2>Another headline</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur...</p>
+      </div>
     </div>
-    <div class="grid-item">
-      <h1>Very important news</h1>
+    <div class="grid-item small-grid-item">
+      <div class="small-grid-nested-item small-image3"></div>
+      <div class="small-grid-nested-item small-text">
+        <h2>Another headline</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur...</p>
+      </div>
     </div>
-    <div class="grid-item">
-      <h1>Very important news</h1>
+    <div class="grid-item small-grid-item">
+      <div class="small-grid-nested-item small-image4"></div>
+      <div class="small-grid-nested-item small-text">
+        <h2>Another headline</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur...</p>
+      </div>
     </div>
-    <div class="grid-item">
-      <h1>Very important news</h1>
+    <div class="grid-item small-grid-item">
+      <div class="small-grid-nested-item small-image5"></div>
+      <div class="small-grid-nested-item small-text">
+        <h2>Another headline</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur...</p>
+      </div>
     </div>
-    <div class="grid-item">
-      <h1>Very important news</h1>
+    <div class="grid-item small-grid-item">
+      <div class="small-grid-nested-item small-image6"></div>
+      <div class="small-grid-nested-item small-text">
+        <h2>Another headline</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur...</p>
+      </div>
     </div>
   </section>
 
