started fixing responsiveness and some design

--- a/code/index.html
+++ b/code/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
@@ -46,6 +47,8 @@
             nulla aliquet enim. Leo a diam sollicitudin tempor id eu. 
             Vitae congue mauris rhoncus aenean vel elit scelerisque.
             </p>
+            <h4>BY ALICE RICKSON</h4>
+            <div class="line-1"></div>
         </div>   
 </section>
 
