Fixed layout problem where media query for desktop was not working. Added css code nth-child for news grid. Addd logo in header.

--- a/code/index.html
+++ b/code/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <title>Wine Travels Magazine</title>
     <link rel="icon" href="icons8-wine-glass-24.png">
     <link rel="stylesheet" href="./style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <h1 class="h1-header">Wine Travels Magazine</h1><!--Make a logo + as a homebutton-->
+      
+      <h1 class="h1-header"><img src="/wine-glass-solid.svg" class="logo-wineglass" alt="Logo of wine glass">Wine Travels Magazine</h1><!--Make a logo + as a homebutton-->
       <button class="button-subscribe">Subscribe to newsletter</button>
     </header>
     <nav class="topnav">
