fixade mobilversion med flex och grid mormor

--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,7 @@
 
   </head>
 <body>
+  <div class="mormor">
   <header> 
       <h1>Dog Parent Weekly</h1>
       <img class="logo" src="/project-news-site/code/logo.svg" alt="Technigo logo">
@@ -29,34 +30,36 @@
         </nav>
     </header>
 
-  <section class="big-news">
+  <section class="big-mama-news">
       <!-- The big news content -->
-      <figure class="big-news-item grid-item-1">
+      <figure class="big-news-item">
         <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
         </figure>
-      <figure class="big-news-item grid-item-2"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt="">
+      <figure class="big-news-item"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-item grid-item-3"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="grid__img" alt="">
+      <figure class="big-news-item"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-item grid-item-5"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="grid__img" alt="">
+      <figure class="big-news-item"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-item grid-item-6"> <img src="/project-news-site/assets/dogwithhat.jpg" class="grid__img" alt="">
+      <figure class="big-news-item"> <img src="/project-news-site/assets/dogwithhat.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-item grid-item-7"> <img src="/project-news-site/assets/dogfood.jpg" class="grid__img" alt="">
+      <figure class="big-news-item"> <img src="/project-news-site/assets/dogfood.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-item grid-item-8"> <img src="/project-news-site/assets/pexels-amy-mccormack-5463180.jpg" alt=""> </figure>
-    <figure class="big-news-item grid-item-9"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
+      <figure class="big-news-item"> <img src="/project-news-site/assets/pexels-amy-mccormack-5463180.jpg" alt=""> </figure>
+    <figure class="big-news-item"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
         </figure>
-    <figure class="big-news-item grid-item-10"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="grid__img" alt="">
+    <figure class="big-news-item grid-item"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="grid__img" alt="">
         </figure>
-    <figure class="big-news-item grid-item-11"> <img src="/project-news-site/assets/unicorndog.jpg" class="grid__img" alt="">
+    <figure class="big-news-item grid-item"> <img src="/project-news-site/assets/unicorndog.jpg" class="grid__img" alt="">
         </figure>
-    <figure class="big-news-item grid-item-12"> <img src="/project-news-site/assets/winteriscoming.jpg" class="grid__img" alt="">
+    <figure class="big-news-item"> <img src="/project-news-site/assets/winteriscoming.jpg" class="grid__img" alt="">
      </figure>
   </section>
 
     <section class="">
       <!-- The other news  -->
     </section>
+  </div>
 </body>
 </html>
