--- a/code/index.html
+++ b/code/index.html
@@ -21,8 +21,87 @@
     </section>
   </header>
 
+<section class="news-grid">
 
-  <section class="grid-parent">
+  <div class="news-card big-card">
+    <a href="#"><article>
+          <img src="#" alt="SOMETHING">
+      <div class="card-text">
+        <h2>hello</h2>
+        <p>afhasdjf sakjhs dfkasdfhaskdjf skj skjfd skj<p>   
+      </div>
+    </article></a>
+  </div>
+
+  <div class="news-card small-card">
+    <a href="#"><article>
+        <img src="./Balloons.jpg" alt="Balloons" style="width:100%;height:70%">
+      <div class="small-card-text">
+        <h3>Interesting Article: You Should Read This</h3>
+            </div>
+    </article></a>
+  </div>
+
+  <div class="news-card small-card">
+    <a href="#"><article>
+      <img src="./smallsunflowers.jpg" alt="Sunflowers" style="width:100%;height:70%">
+    <div class="small-card-text">
+      <h3>Interesting Article: You Should Read This</h3>  
+    </div>
+  </article></a>
+  </div>
+
+  <div class="news-card small-card">
+    <article>
+      <img src="./sunballoon.jpg" alt="Sun balloon in a grass field" style="width:100%;height:70%">
+    <div class="card-text">
+      <h3>Interesting Article: You Should Read This</h3>   
+    </div>
+  </article>
+  </div>
+
+  <div class="news-card small-card">
+    <a href="#"><article>
+      <img src="./workandplay.jpg" alt="sign with the words work and play" style="width:100%;height:70%">
+    <div class="card-text">
+      <h3>Interesting Article: You Should Read This</h3>   
+    </div>
+  </article></a>
+  </div>
+
+  <div class="news-card small-card">
+    <a href="#"><article>
+      <img src="./monkeysmedium.jpg" alt="plastic monkeys" style="width:100%;height:70%">
+    <div class="card-text">
+      <h3>Interesting Article: You Should Read This</h3>  
+    </div>
+  </article></a>
+  </div>
+
+  <div class="news-card small-card">
+    <a href="#"><article>
+      <img src="./smileyballoons.jpg" alt="Trulli" style="width:100%;height:70%">
+    <div class="card-text">
+      <h3>Interesting Article: You Should Read This</h3>  
+    </div>
+  </article></a>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- Functional news grid for mobile, in case I can't make a better one.
+    
+    <section class="grid-parent">
 
     <div class="grid-item big-grid-item">
       <div class="big-grid-nested-item big-image"></div>
@@ -74,8 +153,10 @@
         <p>Lorem ipsum dolor sit amet, consectetur...</p>
       </div>
     </div>
-  </section>
 
+
+  </section>
+-->
   </body>
 </html>
 
