--- a/code/index.html
+++ b/code/index.html
@@ -7,16 +7,36 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+    <div>
+      <header>
+        <h1>Travel news</h1>
+        <h2>Travelling far and wide</h2>    
+        <img src="./images/bear_in_water.jpg" alt="picture of bear_in_water">  
+        <!-- Some kind of logo and navbar -->
+      </header>
+    </div>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <div>
+      <section class="big-news">
+        <h1>Vancouver Island Special!</h1> 
+        <p>This week we visit the Canadian westcoast.</p>
+        <img src="./images/road.jpg" alt="picture of road">
+      </section>
+    </div>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+    <div> 
+      <section class="Other news">
+        <h1>A day in Victoria</h1>
+        <p>Visiting this gem on Vancouver Island.</p>
+        <img src="./images/Victoria.jpg" alt="Picture of Victoria">
+      </section>
+    </div>
+
+    <div>
+      <h1>Have a whale of a time!</h1>
+      <p>When visiting the island, why not take the opportunity to see some whales.</p>
+      <img src="./images/whale_safari.jpg" alt="Picture of whalesafari">
+
+    </div>
   </body>
 </html>
