Added more news

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
       <header>
         <h1>Travel news</h1>
         <h2>Travelling far and wide</h2>    
-        <img src="./images/bear_in_water.jpg" alt="picture of bear_in_water">  
+        <img src="./images/logo2.jpg" alt="picture of logo">  
         <!-- Some kind of logo and navbar -->
       </header>
     </div>
@@ -20,7 +20,7 @@
       <section class="big-news">
         <h1>Vancouver Island Special!</h1> 
         <p>This week we visit the Canadian westcoast.</p>
-        <img src="./images/road.jpg" alt="picture of road">
+        <img src="./images/sea_taxi.jpg" alt="picture of sea_taxi">
       </section>
     </div>
 
@@ -36,7 +36,18 @@
       <h1>Have a whale of a time!</h1>
       <p>When visiting the island, why not take the opportunity to see some whales.</p>
       <img src="./images/whale_safari.jpg" alt="Picture of whalesafari">
+    </div>
 
+    <div>
+      <h1>Beware of the bear!</h1>
+      <p>Make sure you read this before your walk in the woods.</p>
+      <img src="./images/bear_in_water.jpg" alt="Picture of bear_in_water">
+    </div>
+
+    <div>
+      <h1>Scenic routes on the island</h1>
+      <p>Make sure to bring your camera.</p>
+      <img src="./images/road.jpg" alt="Picture of road">
     </div>
   </body>
 </html>
