-message added pics

--- a/code/index.html
+++ b/code/index.html
@@ -49,5 +49,17 @@
       <p>Make sure to bring your camera.</p>
       <img src="./images/road.jpg" alt="Picture of road">
     </div>
+
+    <div>
+      <h1>Surely delicious</h1>
+      <p>A café tucked in the forest. The cupcakes are worth the drive.</p>
+      <img src="./images/shirley_delicious.jpg" alt="Picture of café">
+    </div>
+
+    <div>
+      <h1>Miss the city pulse?</h1>
+      <p> Jump on the ferry and Vancouver is just two hours away.</p>
+      <img src="./images/ferry1.jpg" alt="Picture of ferry">
+    </div>
   </body>
 </html>
