--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,135 @@
 <!DOCTYPE html>
 <html>
+
   <head>
+
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>The only website with valuable articles just for you 🏫🎵🐶🐀 </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');</style>
     <link rel="stylesheet" href="./style.css" />
+  
+
+
     <!-- dont forget the meta tag for responsiveness -->
+
   </head>
+
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+
+      <div class="logo">
+        <img src="./images/logo2.jpg" alt="Logo of an article website" height="250px">
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">What is it</a></li>
+          <li><a href="#">For whom</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Faq</a></li>
+        </ul>
+      </nav>
+
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+  <main> 
 
-    <section class="">
-      <!-- The other news  -->
+  <!-- instead of content-left use big-news in css-->
+
+    <section class="big-news">
+
+  <!-- The big news content -->
+      <div class="content-left">
+       <h1>The heuristics of Neurodesign</h1>
+       <p>Exactly how the mind works is still largely a mystery. And as with most mysteries, there are clues that give resolution to the interworking of how we think. How we think involves a swarm of highly interrelated mental processes including attention, memory, and thinking.</p>
+       <button>Learn more</button>
+      </div>
+
+     <div class="content-right"> 
+        <img src="./images/image1.jpg" alt="Article design" width="600px"> 
+     </div>
+
     </section>
-  </body>
+  
+  </main>
+
+<!-- The other news  -->
+
+<!-- Testing css grid  -->
+
+
+<section class="grid-parent">
+
+  <div class="grid-item"> 
+    <h2><a href="#">What is Web 3.0?</a></h2> <br>
+    <img src="./images/image4.jpg" width="250px">
+    <h3>Imagine a new type of internet that not only accurately interprets what 
+      you input, but actually understands everything you convey, whether through text,
+      voice or other media, one where all content you consume is more tailored to you 
+      than ever before.</h3> 
+    <p>One that gives you full privacy controls over the data you share with 
+       other parties, allows you to earn money if you provide it to advertisers
+       or interact with certain applications, and remains free from draconian 
+       third-party censorship.</p>
+    </div>
+  
+  <div class="grid-item">
+    <h2>Spotify’s Embodiment of Emotional Design</h2>
+    <img src="./images/image3.jpg" width="250px">
+    <h3>On average, each smartphone user has 80+ apps on their phone, but only really
+        launch around 9 apps per day. One particular app
+        that myself and many others use to cater to our music-streaming and podcast-binging
+        needs is Spotify. </h3> 
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Iure, pariatur voluptatem. Assumenda, tempora? Velit, ipsum hic ex placeat, 
+      nisi illo suscipit voluptatum, expedita harum at debitis magni magnam sed? 
+      Voluptates.</p> 
+    </div>
+
+    <div class="grid-item">
+      <h2>What is Web 3.0?</h2>
+      <img src="./images/image2.jpg" width="250px">
+      <h3>Imagine a new type of internet that not only accurately interprets what 
+        you input, but actually understands everything you convey, whether through text,
+        voice or other media. </h3> 
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Iure, pariatur voluptatem. Assumenda, tempora? Velit, ipsum hic ex placeat, 
+        nisi illo suscipit voluptatum, expedita harum at debitis magni magnam sed? 
+        Voluptates.</p> 
+      </div>
+
+      <div class="grid-item">
+        <h2>What is Web 3.0?</h2>
+        <img src="./images/image5.jpg" width="250px">
+        <h3>Imagine a new type of internet that not only accurately interprets what 
+          you input, but actually understands everything you convey, whether through text,
+          voice or other media, one where all content you consume is more tailored to you 
+          than ever before.</h3> 
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Iure, pariatur voluptatem. Assumenda, tempora? Velit, ipsum hic ex placeat, 
+          nisi illo suscipit voluptatum, expedita harum at debitis magni magnam sed? 
+          Voluptates.</p> 
+        </div>
+
+
+</section>
+
+<!-- The end of css grid -->
+
+
+<footer>
+
+  <p>Website by Maja Zimnoch | 2023 | 
+  <a href="mailto:majamzimnoch@gmail.com" target="_blank">Drop me a letter</a>
+  </p>
+
+
+</footer>
+</body>
 </html>
