--- a/code/index.html
+++ b/code/index.html
@@ -28,10 +28,16 @@
     </section>
 
     <section class="small-news">
-      <h3>Here's a tattoo!</h3>
-      <h3>Here's a cat too!</h3>
-      <h3>More tats!</h3>
-      <h3>More cats!</h3>
+      <div class="articles">
+        <h3>Here's a tattoo!</h3>
+        <h3>Here's a cat too!</h3>
+        <h3>More tats!</h3>
+        <h3>More cats!</h3>
+        <h3>Cats</h3>
+        <h3>Tats</h3>
+        <h3>Little Kitty Cat</h3>
+        <h3>Finally, Tattoos</h3>
+      </div>
       <!-- The other news  -->
     </section>
   </body>
