final version of site for mobile. Structured header with flexbox, added a footer with a button, added the navbar for later and set the display to none

--- a/code/index.html
+++ b/code/index.html
@@ -15,9 +15,12 @@
       <div class="flex-child logo">
         <a href="index.html"><img src="./smalllogotransparent.png" alt="Good News logo"></a>
       </div>
-      <div class="flex-child icon-mobile">
-        <a href="#"><img src="./burgermenu.png" alt="menu icon"></a>
-      </div>
+      <div class="flex-child navbar">
+        <nav>
+            <a href="./index.html">Home</a>
+            <a href="#">Archive</a>
+            <a href="#">Contact</a>
+        </nav>
     </section>
   </header>
 
@@ -25,10 +28,10 @@
 
   <div class="news-card big-card">
     <a href="#"><article>
-          <img src="#" alt="SOMETHING">
-      <div class="card-text">
-        <h2>hello</h2>
-        <p>afhasdjf sakjhs dfkasdfhaskdjf skj skjfd skj<p>   
+          <img src="./woman-nature-medium.jpg" alt="Woman hiking in nature" style="width:100%;height:50%">
+      <div class="big-card-text">
+        <h2>Headline For a Very Important Article</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam rutrum auctor felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam tempor laoreet pellentesque. Aliquam in congue tellus...<p>   
       </div>
     </article></a>
   </div>
@@ -88,129 +91,9 @@
   </div>
 </section>
 
+<footer>
+  <a href="#top"><button>Return to the Top</button></a>
+</footer>
 
-
-
-
-
-
-
-
-
-
-
-  <!-- Functional news grid for mobile, in case I can't make a better one.
-    
-    <section class="grid-parent">
-
-    <div class="grid-item big-grid-item">
-      <div class="big-grid-nested-item big-image"></div>
-      <div class="big-grid-nested-item big-text">
-        <h1>Very Important News Headline: You should really read this</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu imperdiet lorem. Maecenas in arcu fermentum... </p>
-      </div>
-    </div>
-
-    <div class="grid-item small-grid-item">
-      <div class="small-grid-nested-item small-image1"></div>
-      <div class="small-grid-nested-item small-text">
-        <h2>Another headline</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-      </div>
-    </div>
-    <div class="grid-item small-grid-item">
-      <div class="small-grid-nested-item small-image2"></div>
-      <div class="small-grid-nested-item small-text">
-        <h2>Another headline</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-      </div>
-    </div>
-    <div class="grid-item small-grid-item">
-      <div class="small-grid-nested-item small-image3"></div>
-      <div class="small-grid-nested-item small-text">
-        <h2>Another headline</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-      </div>
-    </div>
-    <div class="grid-item small-grid-item">
-      <div class="small-grid-nested-item small-image4"></div>
-      <div class="small-grid-nested-item small-text">
-        <h2>Another headline</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-      </div>
-    </div>
-    <div class="grid-item small-grid-item">
-      <div class="small-grid-nested-item small-image5"></div>
-      <div class="small-grid-nested-item small-text">
-        <h2>Another headline</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-      </div>
-    </div>
-    <div class="grid-item small-grid-item">
-      <div class="small-grid-nested-item small-image6"></div>
-      <div class="small-grid-nested-item small-text">
-        <h2>Another headline</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-      </div>
-    </div>
-
-
-  </section>
--->
-  </body>
-</html>
-
-<!--for grid but won't work
-<section class="grid-parent-news">
-  <div class="grid-item grid-item-big">
-    <img src="./busystreet.jpg" alt="busy street"/>
-    <h2>Big News</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus consectetur, elit ac aliquet ullamcorper, magna urna lacinia dui, et mattis quam ipsum in erat. Donec mattis interdum orci, et viverra massa eleifend vitae. Mauris semper, odio ac tristique tincidunt, dolor ante laoreet turpis, nec congue metus libero in dolor.</p>
-  </div>
-  <div class="grid-item grid-item-small">
-      <img src="./sunflowers.jpg" alt="sunflowers"/>
-      <h3>Other News 1</h3>
-  </div>
-  <div class="grid-item grid-item-small">
-      <img src="./manreading.jpg" alt="Man reading newspapers"/>
-      <h3>Other News 2</h3>
-  </div>
-  <div class="grid-item grid-item-small">
-    <img src="./hands.jpg" alt="Hands joining together"/>
-    <h3>Other News 3</h3>
-  </div> 
-  <div class="grid-item grid-item-small">
-    <img src="./newspapers.jpg" alt="Newsapers and magazins on a rack"/>
-    <h3>Other News 4</h3>
-  </div> 
-  <div class="grid-item grid-item-small">
-    <img src="./work.jpg" alt="Three people working and laughing together"/>
-    <h3>Other News 5</h3>
-  </div> 
-  <div class="grid-item grid-item-small">
-    <img src="./youth.jpg" alt="Young people in a crowd"/>
-    <h3>Other News 6</h3>
-  </div> 
-</section>
-
--->
-
-
-
-
-
-
-
-
-
-<!--  
-  This is the html for the navbar, in tablet/desktop mode. styling is in the forlater css file
-  <div class="flex-child navbar">
-      <nav>
-          <a href="./index.html">Home</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-      </nav>
-    </div>-->
 
 
