--- a/code/index.html
+++ b/code/index.html
@@ -12,13 +12,16 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <h1 class="logo">SURF'S UP</h1>
+      <div class="logo-name">
+        <img src="logo.png">
+        <h1>SURF'S UP</h1>
+      </div>
        <section class="navbar">
         <div class="topnav">
-          <a href="#home">HOME</a>
-          <a href="#news">NEWS</a>
+          <a href="#archive">ARCHIVE</a>
+          <a href="#surfcamps">SURFCAMPS</a>
+          <a href="#gear">GET YOUR GEAR</a>
           <a href="#contact">CONTACT</a>
-          <a href="#about">ABOUT</a>
         </div>
        </section>
     </header>
@@ -30,11 +33,10 @@
         <h1>TOP LOCATIONS FOR 2023</h1>
         <h2>Thinking about your next trip? Check out these places!</h2>
         <p>This is a interesting text about surfspots that will make you want to read more.
+          This is a interesting text about surfspots that will make you want to read more.
           This is a interesting text about surfspots that will make you want to read more.</p>
         <button type="button">INSPIRE ME</button>
       </div>
-      
-      
     </section>
 
     <section class="grid-parent">
@@ -43,45 +45,58 @@
         <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
         <h2>Title of the news item</h2>
         <p>Short introduction to article.</p>
+        <button type="button">COOL!<br>TELL ME MORE</button>
       </div>
       <div class="grid item">
         <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
         <h2>Title of the news item</h2>
         <p>Short introduction to article.</p>
+        <button type="button">COOL!<br>TELL ME MORE</button>
       </div>
       <div class="grid item">
         <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
         <h2>Title of the news item</h2>
         <p>Short introduction to article.</p>
+        <button type="button">COOL!<br>TELL ME MORE</button>
       </div>
       <div class="grid item">
         <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
         <h2>Title of the news item</h2>
         <p>Short introduction to article.</p>
+        <button type="button">COOL!<br>TELL ME MORE</button>
       </div>
       <div class="grid item">
         <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
         <h2>Title of the news item</h2>
         <p>Short introduction to article.</p>
+        <button type="button">COOL!<br>TELL ME MORE</button>
       </div>
       <div class="grid item">
         <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
         <h2>Title of the news item</h2>
         <p>Short introduction to article.</p>
+        <button type="button">COOL!<br>TELL ME MORE</button>
       </div>
       <div class="grid item">
         <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
         <h2>Title of the news item</h2>
         <p>Short introduction to article.</p>
+        <button type="button">COOL!<br>TELL ME MORE</button>
       </div>
       <div class="grid item">
         <img src="https://images.unsplash.com/photo-1540976080898-9f223dfaf8b0?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzMwMjg4NjM&ixlib=rb-4.0.3&q=80"/>
         <h2>Title of the news item</h2>
         <p>Short introduction to article.</p>
+        <button type="button">COOL!<br>TELL ME MORE</button>
       </div>
-
-
-
     </section>
+
+    <footer>
+      <!--Add a footer-->
+      <a href="#archive">ARCHIVE</a>
+      <a href="#surfcamps">SURFCAMPS</a>
+      <a href="#gear">GET YOUR GEAR</a>
+      <a href="#contact">CONTACT</a>
+    </footer>
   </body>
 </html>
