--- a/code/index.html
+++ b/code/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css"/>
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
 
   <body>
     <header>
 
-      <!--menu tablet & desktop ; -->
+      <!-- Menu with a logo -->
     <nav class="navbar">
       <a href="xxx" class="logo">
         <img src="./logo/ow-logo.svg" alt="Old women logo" class="logo-img">
@@ -57,7 +56,7 @@
     </section>
     
 
-    <!-- Articles in grid -->
+    <!-- Articles in a grid -->
     <section class="grid-parent">
       <a href="#">
         <div class="grid-item">
@@ -80,7 +79,7 @@
         </div>
       </a>
 
-      <a href="#">
+      <a href="https://youtube.com/clip/UgkxetpYb_ZADTUziL3gxrdo_zeO9eSjpBhu" alt="click a link">
         <div class="grid-item">
           <img src="./img/bath-1.jpg" alt="thing happening">
           <p>If it wiggles, you will live longer</p> 
