--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
@@ -20,10 +21,16 @@
             </div>
             <!-- NAVBAR -->
             <div class="nav-bar">
-              <a class="active" href="#home">Home</a>
-              <a href="#podcasts">Podcasts</a>
-              <a href="#books">Books</a>
-              <a href="#contact">Contact</a>
+                <nav>
+                  <a class="active" href="#home">Home</a>
+                  <a href="#podcasts">Podcasts</a>
+                  <a href="#books">Books</a>
+                  <a href="#contact">Contact</a>
+              </nav>           
+            </div>
+            
+            <div class="mobile-menu">
+              <i class="material-icons" style="font-size: 36px;">dehaze</i>
             </div>
           </header>
 
